...
  ) {
    ClickableText(
        text = annotatedText,
        style =
            Typography.bodyLarge.copy(color = colorScheme.onSurface, textAlign = TextAlign.Center),
        onClick = { navigationActions.navigateTo(Screen.SIGN_UP) },
        modifier = Modifier.fillMaxWidth().testTag("signUpLink"))
  }
}

/**
 * A composable function that displays a "Sign In" button with validation and login functionality.
 *
...
